# kolibri-engine

./: AGENTS.md  Cargo.toml  README.md  justfile
.zed/: settings.json
kolibri-engine/: Cargo.toml
kolibri-engine/examples/: cube.rs  cube.wgsl  proc.rs  proc.wgsl  voxel.rs
kolibri-engine/src/: camera.rs  error.rs  game.rs  lib.rs  octree.rs  prelude.rs  scene.rs  transform.rs  util.rs
kolibri-engine/src/proc/: mod.rs
kolibri-engine/src/scenes/: entity3d.rs  mod.rs
kolibri-engine/src/scenes/proc/: mod.rs  proc.wgsl
kolibri-engine/src/voxel/: mod.rs  voxel.wgsl
