[package]
name = "kolibri-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
egui = "0.34.3"
glam = "0.33.0"
log = "0.4.32"
notify = "8.2.0"
pollster = "0.4.0"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = "1.52.3"
wgpu = "29.0.3"
winit = "0.30.13"

[dev-dependencies]
env_logger = "0.11.10"

[features]
hmr = []
